Fix up styling and add a resource collapsable.

--- a/assets/stylesheets/landing_page/default.css
+++ b/assets/stylesheets/landing_page/default.css
@@ -21,9 +21,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
-	color: #ffe8e7;
-	background: #E96D65;
-	font-weight: 300;
+	background: #ebf3fb;
 	overflow-x: hidden;
 }
 
@@ -70,8 +68,6 @@ a:active {
 
 /* To Navigation Style */
 .codrops-top {
-	background: #fff;
-	background: rgba(255, 255, 255, 0.4);
 	text-transform: uppercase;
 	width: 100%;
 	font-size: 0.69em;
